@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.2.15-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-02-15 12:01:27, took 00:13:21, with 60 workers, on 3416 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2024-02-15 13:28:29, took 00:16:08, with 60 workers, on 3416 cases, 1 failed, 0 traces, 10 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -86,7 +86,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp01.tst">conn-dhcp01.tst</a></td><td>success</td><td>dhcp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp02.tst">conn-dhcp02.tst</a></td><td>success</td><td>dhcp with arp/nd security</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp03.tst">conn-dhcp03.tst</a></td><td>success</td><td>dhcp with static allocation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp04.tst">conn-dhcp04.tst</a></td><td>success</td><td>dhcp with excluded address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp04.tst">conn-dhcp04.tst</a></td><td>#6-run-r3 tping 100 5 4444::4 vrf v1</td><td>dhcp with excluded address</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp05.tst">conn-dhcp05.tst</a></td><td>success</td><td>dhcp with upgraded server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp06.tst">conn-dhcp06.tst</a></td><td>success</td><td>dhcp with interface server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dlsw01.tst">conn-dlsw01.tst</a></td><td>success</td><td>dlsw over ipv4</td></tr>
