@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.2.15-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-02-15 12:13:01, took 00:11:16, with 60 workers, on 534 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-02-15 13:39:25, took 00:10:39, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
