@@ -15703,3 +15703,6 @@ failed: dhcp with excluded address
 ---------------------------------- 2024-01-24 06:23:06 24.1.24
 no failed: dhcp with excluded address
 qc pass: dhcp with excluded address
+---------------------------------- 2024-02-15 13:12:20 24.2.15
+no qc pass: dhcp with excluded address
+failed: dhcp with excluded address
